@@ -27,6 +27,11 @@
       <DataField DataType="double" DisplayFormat="%.0f %s" EditFormat="%.0f" Min="0" Max="10000" Step="25"/>
     </Edit>
 
+    <Edit Name="prpFinishHeightRef" Caption="Finish height ref." X="2" Width="-2" Height="22" CaptionWidth="140"
+      Help="Reference used for finish min height rule&#10;[MSL] Reference is altitude above mean sea level&#10;[AGL] Reference is the height above the finish point">
+      <DataField DataType="enum"/>
+    </Edit>
+
     <Edit Name="prpFAIFinishHeight" Caption="FAI start / finish rules" X="2" Width="-2" Height="22" CaptionWidth="140"
       Help="If enabled, has no max start height or max start speed and requires the minimum height above ground for finish to be greater than 1000m below the start height.">
       <DataField DataType="boolean" OnDataAccess="pnlTaskProperties::OnFAIFinishHeightData"/>
