@@ -52,6 +52,8 @@ public:
   unsigned start_max_height_ref;
   /** Minimum height AGL (m) allowed to finish */
   unsigned finish_min_height;
+  /** Reference for min finish height (0=AGL, 1=abs) */
+  unsigned finish_min_height_ref;
   /** Whether ordered task start and finish requires FAI height rules
    *  and (no) speed rule */
   bool fai_finish;
