@@ -53,6 +53,7 @@ Profile::Load(SectorDefaults &settings)
 void
 Profile::Load(OrderedTaskBehaviour &settings)
 {
+  Get(szProfileFinishHeightRef, settings.finish_min_height_ref);
   Get(szProfileFinishMinHeight, settings.finish_min_height);
   Get(szProfileStartHeightRef, settings.start_max_height_ref);
   Get(szProfileStartMaxHeight, settings.start_max_height);
